# gpui-ghostty

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/ghostty_vt/: Cargo.toml
crates/ghostty_vt/examples/: perf_style_dump.rs
crates/ghostty_vt/src/: lib.rs
crates/ghostty_vt/tests/: full_redraw_dirty_rows.rs  smoke.rs  style_dump.rs  zig_smoke.rs
crates/ghostty_vt_sys/: Cargo.toml  build.rs
crates/ghostty_vt_sys/include/: ghostty_vt.h
crates/ghostty_vt_sys/src/: lib.rs
crates/ghostty_vt_sys/zig/: lib.zig
crates/gpui_ghostty_terminal/: Cargo.toml
crates/gpui_ghostty_terminal/src/: config.rs  lib.rs  session.rs  tests.rs
crates/gpui_ghostty_terminal/src/view/: mod.rs
docs/: perf_instruments.md
examples/basic_terminal/: Cargo.toml
examples/basic_terminal/src/: main.rs
examples/pty_terminal/: Cargo.toml
examples/pty_terminal/src/: main.rs
examples/split_pty_terminal/: Cargo.toml
examples/split_pty_terminal/src/: main.rs
examples/vt_dump/: Cargo.toml
examples/vt_dump/src/: main.rs
scripts/: bootstrap-zig.sh
