[package]
name = "gpui_ghostty_terminal"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
gpui = ["dep:gpui"]

[dependencies]
ghostty_vt = { path = "../ghostty_vt" }

gpui = { git = "https://github.com/zed-industries/zed", rev = "6016d0b8c6a22e586158d3b6f810b3cebb136118", package = "gpui", optional = true }

